# ArtiRenderer-Rasterization

./: .gitignore  CMakeLists.txt  README.md
assets/teapot/: default.mtl
src/: camera.cpp  camera.h  color.h  entity.h  frame_data.h  main.cpp  material.h  mesh.cpp  mesh.h  model.h  model_loader.cpp  model_loader.h  ppm_writer.h  renderer.cpp  renderer.h  scene.h  scene_renderer.cpp  scene_renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/io/: ppm_writer.h
src/math/: mat2.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
src/platform/: window.cpp  window.h
src/platform/desktop/: glfw_window.cpp  glfw_window.h
src/render/: frame_data.h  renderer.cpp  renderer.h  scene_renderer.cpp  scene_renderer.h  shader.cpp  shader.h
src/resource/: material.h  mesh.cpp  model.h  texture.cpp
src/resource/importers/: model_loader.cpp  model_loader.h
src/scene/: camera.cpp  entity.h  scene.h
